<resources>
    <string name="app_name">Pizzaria</string>
    <string name="chopp">Chopp:</string>
    <string name="pizzas">Pizzas:</string>
    <string name="recheios">Recheios:</string>
    <string name="pessoas">Pessoas:</string>
    <string name="consumo">Consumo:</string>
    <string name="servicos">Serviços:</string>
    <string name="total">Total:</string>
    <string name="porPessoa">Por Pessoa:</string>
    <string name="calcular">Calcular</string>
    <string name="nome">Pizzaria Horácio</string>
</resources>
